Testing to fix transparent rectangle styling on mobile v5.

--- a/styles/_animations.scss
+++ b/styles/_animations.scss
@@ -20,6 +20,17 @@
     }
 }
 
+@-moz-keyframes slideIn {
+  0% {
+    -moz-transform: translateX(100%);
+    opacity: 0;
+  }
+  100% {
+    -moz-transform: translateX(0);
+    opacity: 0.1;
+  }
+}
+
 @keyframes slideUp {
     0% {
         transform: translateY(75%);
@@ -38,6 +49,17 @@
     }
     100% {
         -webkit-transform: translateY(0);
+        opacity: 0.85;
+    }
+}
+
+@-moz-keyframes slideUp {
+    0% {
+        -moz-transform: translateY(75%);
+        opacity: 0;
+    }
+    100% {
+        -moz-transform: translateY(0);
         opacity: 0.85;
     }
 }
